# spectralmap

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: Makefile  requirements.txt
docs/source/: api.rst  changelog.rst  conf.py  contributing.rst  faq.rst  index.rst  installation.rst  quickstart.rst  references.rst  rtd_setup.rst
docs/source/tutorials/: 01_simulated_lightcurve.rst  02_map_inversion.rst  03_retrieval_workflow.rst  05_mathematical_framework.ipynb  Luhman_16B.ipynb  SIMP_0136.ipynb  index.rst
src/spectralmap/: __init__.py  bayesian_linalg.py  cluster.py  mapping.py
tests/: test_smoke.py
